# kepler-cricket-chirper-rs

./: .gitignore  README.md
cricket-chirper/: Cargo.toml  boot2.x  build.rs  memory.x
cricket-chirper/.cargo/: config.toml
cricket-chirper/src/: main.rs  main_pwm.rs
